--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
   "dependencies": {
     "@vitest/ui": "^0.29.3",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
+    "firebase": "^9.22.0",
+    "framer-motion": "^10.12.14",
     "module-alias": "^2.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
     "react-svg": "^16.1.6",
-    "vite-plugin-svgr": "^2.4.0"
+    "vite-plugin-svgr": "^2.4.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
