feat: add redux & ls

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "npx eslint src/ --ext .tsx --fix"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@vitest/ui": "^0.29.3",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
@@ -23,10 +24,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-svg": "^16.1.6",
-    "vite-plugin-svgr": "^2.4.0",
-    "zustand": "^4.3.8"
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
